chonchon/rook-ceph/ingress.yaml
---
#apiVersion: networking.k8s.io/v1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-rgw-ingress
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  tls:
  - hosts:
    - s3.cp.lsst.org
    secretName: rook-ceph-rgw-ingress-tls
  rules:
  - host: s3.cp.lsst.org
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-rgw-my-store
          servicePort: 80
          #service:
          #  name: rook-ceph-rgw-my-store
          #  port:
          #    number: 80
